infra/main.json
{
  "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",
  "metadata": {
    "_generator": {
      "name": "bicep",
      "version": "0.40.2.10011",
      "templateHash": "2751248304857672758"
    }
  },
  "parameters": {
    "environmentName": {
      "type": "string",
      "minLength": 1,
      "maxLength": 64,
      "metadata": {
        "description": "Name of the environment that can be used as part of naming resource convention."
      }
    },
    "adminUsername": {
      "type": "string",
      "defaultValue": "azureuser",
      "metadata": {
        "description": "Admin username for the Linux VM."
      }
    },
    "adminPassword": {
      "type": "securestring",
      "metadata": {
        "description": "Admin password for the Linux VM."
      }
    },
    "vmSize": {
      "type": "string",
      "defaultValue": "Standard_B2s",
      "metadata": {
        "description": "VM size for the Linux VM."
      }
    }
  },
  "variables": {
    "$fxv#0": {
      "resourcesResourceGroups": "rg-",
      "networkVirtualNetworks": "vnet-",
      "networkNetworkSecurityGroups": "nsg-",
      "networkPublicIPAddresses": "pip-",
      "networkNetworkInterfaces": "nic-",
      "networkBastionHosts": "bas-",
      "computeVirtualMachines": "vm-"
    },
    "abbrs": "[variables('$fxv#0')]",
    "location": "[resourceGroup().location]",
    "resourceToken": "[toLower(uniqueString(subscription().id, parameters('environmentName'), variables('location')))]",
    "tags": {
      "azd-env-name": "[parameters('environmentName')]"
    }
  },
  "resources": [
    {
      "type": "Microsoft.Resources/deployments",
      "apiVersion": "2025-04-01",
      "name": "vnet-deployment",
      "properties": {
        "expressionEvaluationOptions": {
          "scope": "inner"
        },
        "mode": "Incremental",
        "parameters": {
          "name": {
            "value": "[format('{0}{1}', variables('abbrs').networkVirtualNetworks, variables('resourceToken'))]"
          },
          "location": {
            "value": "[variables('location')]"
          },
          "tags": {
            "value": "[variables('tags')]"
          }
        },
        "template": {
          "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
          "contentVersion": "1.0.0.0",
          "metadata": {
            "_generator": {
              "name": "bicep",
              "version": "0.40.2.10011",
              "templateHash": "4636519768340044423"
            }
          },
          "parameters": {
            "name": {
              "type": "string",
              "metadata": {
                "description": "Name of the Virtual Network."
              }
            },
            "location": {
              "type": "string",
              "metadata": {
                "description": "Location for the resource."
              }
            },
            "tags": {
              "type": "object",
              "defaultValue": {},
              "metadata": {
                "description": "Tags for the resource."
              }
            },
            "vnetAddressPrefix": {
              "type": "string",
              "defaultValue": "10.0.0.0/16",
              "metadata": {
                "description": "Address prefix for the Virtual Network."
              }
            },
            "vmSubnetAddressPrefix": {
              "type": "string",
              "defaultValue": "10.0.1.0/24",
              "metadata": {
                "description": "Address prefix for the VM subnet."
              }
            },
            "bastionSubnetAddressPrefix": {
              "type": "string",
              "defaultValue": "10.0.0.0/26",
              "metadata": {
                "description": "Address prefix for the Azure Bastion subnet."
              }
            }
          },
          "resources": [
            {
              "type": "Microsoft.Network/networkSecurityGroups",
              "apiVersion": "2024-01-01",
              "name": "nsg-vm-subnet",
              "location": "[parameters('location')]",
              "tags": "[parameters('tags')]",
              "properties": {
                "securityRules": [
                  {
                    "name": "Allow-HTTP-8080-Inbound",
                    "properties": {
                      "priority": 100,
                      "direction": "Inbound",
                      "access": "Allow",
                      "protocol": "Tcp",
                      "sourceAddressPrefix": "VirtualNetwork",
                      "sourcePortRange": "*",
                      "destinationAddressPrefix": "*",
                      "destinationPortRange": "8080"
                    }
                  }
                ]
              }
            },
            {
              "type": "Microsoft.Network/networkSecurityGroups",
              "apiVersion": "2024-01-01",
              "name": "nsg-bastion-subnet",
              "location": "[parameters('location')]",
              "tags": "[parameters('tags')]",
              "properties": {
                "securityRules": [
                  {
                    "name": "AllowHttpsInbound",
                    "properties": {
                      "priority": 120,
                      "direction": "Inbound",
                      "access": "Allow",
                      "protocol": "Tcp",
                      "sourceAddressPrefix": "Internet",
                      "sourcePortRange": "*",
                      "destinationAddressPrefix": "*",
                      "destinationPortRange": "443"
                    }
                  },
                  {
                    "name": "AllowGatewayManagerInbound",
                    "properties": {
                      "priority": 130,
                      "direction": "Inbound",
                      "access": "Allow",
                      "protocol": "Tcp",
                      "sourceAddressPrefix": "GatewayManager",
                      "sourcePortRange": "*",
                      "destinationAddressPrefix": "*",
                      "destinationPortRange": "443"
                    }
                  },
                  {
                    "name": "AllowAzureLoadBalancerInbound",
                    "properties": {
                      "priority": 140,
                      "direction": "Inbound",
                      "access": "Allow",
                      "protocol": "Tcp",
                      "sourceAddressPrefix": "AzureLoadBalancer",
                      "sourcePortRange": "*",
                      "destinationAddressPrefix": "*",
                      "destinationPortRange": "443"
                    }
                  },
                  {
                    "name": "AllowBastionHostCommunicationInbound",
                    "properties": {
                      "priority": 150,
                      "direction": "Inbound",
                      "access": "Allow",
                      "protocol": "*",
                      "sourceAddressPrefix": "VirtualNetwork",
                      "sourcePortRange": "*",
                      "destinationAddressPrefix": "VirtualNetwork",
                      "destinationPortRanges": [
                        "8080",
                        "5701"
                      ]
                    }
                  },
                  {
                    "name": "AllowSshRdpOutbound",
                    "properties": {
                      "priority": 100,
                      "direction": "Outbound",
                      "access": "Allow",
                      "protocol": "Tcp",
                      "sourceAddressPrefix": "*",
                      "sourcePortRange": "*",
                      "destinationAddressPrefix": "VirtualNetwork",
                      "destinationPortRanges": [
                        "22",
                        "3389"
                      ]
                    }
                  },
                  {
                    "name": "AllowAzureCloudOutbound",
                    "properties": {
                      "priority": 110,
                      "direction": "Outbound",
                      "access": "Allow",
                      "protocol": "Tcp",
                      "sourceAddressPrefix": "*",
                      "sourcePortRange": "*",
                      "destinationAddressPrefix": "AzureCloud",
                      "destinationPortRange": "443"
                    }
                  },
                  {
                    "name": "AllowBastionHostCommunicationOutbound",
                    "properties": {
                      "priority": 120,
                      "direction": "Outbound",
                      "access": "Allow",
                      "protocol": "*",
                      "sourceAddressPrefix": "VirtualNetwork",
                      "sourcePortRange": "*",
                      "destinationAddressPrefix": "VirtualNetwork",
                      "destinationPortRanges": [
                        "8080",
                        "5701"
                      ]
                    }
                  },
                  {
                    "name": "AllowGetSessionInformationOutbound",
                    "properties": {
                      "priority": 130,
                      "direction": "Outbound",
                      "access": "Allow",
                      "protocol": "*",
                      "sourceAddressPrefix": "*",
                      "sourcePortRange": "*",
                      "destinationAddressPrefix": "Internet",
                      "destinationPortRanges": [
                        "80",
                        "443"
                      ]
                    }
                  }
                ]
              }
            },
            {
              "type": "Microsoft.Network/virtualNetworks",
              "apiVersion": "2024-01-01",
              "name": "[parameters('name')]",
              "location": "[parameters('location')]",
              "tags": "[parameters('tags')]",
              "properties": {
                "addressSpace": {
                  "addressPrefixes": [
                    "[parameters('vnetAddressPrefix')]"
                  ]
                },
                "subnets": [
                  {
                    "name": "snet-vm",
                    "properties": {
                      "addressPrefix": "[parameters('vmSubnetAddressPrefix')]",
                      "networkSecurityGroup": {
                        "id": "[resourceId('Microsoft.Network/networkSecurityGroups', 'nsg-vm-subnet')]"
                      }
                    }
                  },
                  {
                    "name": "AzureBastionSubnet",
                    "properties": {
                      "addressPrefix": "[parameters('bastionSubnetAddressPrefix')]",
                      "networkSecurityGroup": {
                        "id": "[resourceId('Microsoft.Network/networkSecurityGroups', 'nsg-bastion-subnet')]"
                      }
                    }
                  }
                ]
              },
              "dependsOn": [
                "[resourceId('Microsoft.Network/networkSecurityGroups', 'nsg-bastion-subnet')]",
                "[resourceId('Microsoft.Network/networkSecurityGroups', 'nsg-vm-subnet')]"
              ]
            }
          ],
          "outputs": {
            "vnetName": {
              "type": "string",
              "value": "[parameters('name')]"
            },
            "vnetId": {
              "type": "string",
              "value": "[resourceId('Microsoft.Network/virtualNetworks', parameters('name'))]"
            },
            "vmSubnetId": {
              "type": "string",
              "value": "[reference(resourceId('Microsoft.Network/virtualNetworks', parameters('name')), '2024-01-01').subnets[0].id]"
            },
            "bastionSubnetId": {
              "type": "string",
              "value": "[reference(resourceId('Microsoft.Network/virtualNetworks', parameters('name')), '2024-01-01').subnets[1].id]"
            }
          }
        }
      }
    },
    {
      "type": "Microsoft.Resources/deployments",
      "apiVersion": "2025-04-01",
      "name": "vm-deployment",
      "properties": {
        "expressionEvaluationOptions": {
          "scope": "inner"
        },
        "mode": "Incremental",
        "parameters": {
          "name": {
            "value": "[format('{0}{1}', variables('abbrs').computeVirtualMachines, variables('resourceToken'))]"
          },
          "location": {
            "value": "[variables('location')]"
          },
          "tags": {
            "value": "[variables('tags')]"
          },
          "subnetId": {
            "value": "[reference(resourceId('Microsoft.Resources/deployments', 'vnet-deployment'), '2025-04-01').outputs.vmSubnetId.value]"
          },
          "adminUsername": {
            "value": "[parameters('adminUsername')]"
          },
          "adminPassword": {
            "value": "[parameters('adminPassword')]"
          },
          "vmSize": {
            "value": "[parameters('vmSize')]"
          }
        },
        "template": {
          "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
          "contentVersion": "1.0.0.0",
          "metadata": {
            "_generator": {
              "name": "bicep",
              "version": "0.40.2.10011",
              "templateHash": "9108238899628486728"
            }
          },
          "parameters": {
            "name": {
              "type": "string",
              "metadata": {
                "description": "Name of the Virtual Machine."
              }
            },
            "location": {
              "type": "string",
              "metadata": {
                "description": "Location for the resource."
              }
            },
            "tags": {
              "type": "object",
              "defaultValue": {},
              "metadata": {
                "description": "Tags for the resource."
              }
            },
            "subnetId": {
              "type": "string",
              "metadata": {
                "description": "Subnet ID to deploy the VM into."
              }
            },
            "adminUsername": {
              "type": "string",
              "metadata": {
                "description": "Admin username for the VM."
              }
            },
            "adminPassword": {
              "type": "securestring",
              "metadata": {
                "description": "Admin password for the VM."
              }
            },
            "vmSize": {
              "type": "string",
              "defaultValue": "Standard_B2s",
              "metadata": {
                "description": "VM size."
              }
            },
            "imagePublisher": {
              "type": "string",
              "defaultValue": "Canonical",
              "metadata": {
                "description": "OS image publisher."
              }
            },
            "imageOffer": {
              "type": "string",
              "defaultValue": "0001-com-ubuntu-server-jammy",
              "metadata": {
                "description": "OS image offer."
              }
            },
            "imageSku": {
              "type": "string",
              "defaultValue": "22_04-lts-gen2",
              "metadata": {
                "description": "OS image SKU."
              }
            }
          },
          "variables": {
            "cloudInitScript": "#cloud-config\npackage_update: true\npackage_upgrade: true\npackages:\n  - apache2\nruncmd:\n  - sed -i 's/Listen 80/Listen 8080/' /etc/apache2/ports.conf\n  - sed -i 's/:80/:8080/' /etc/apache2/sites-enabled/000-default.conf\n  - systemctl restart apache2\n  - systemctl enable apache2\n"
          },
          "resources": [
            {
              "type": "Microsoft.Network/networkInterfaces",
              "apiVersion": "2024-01-01",
              "name": "[format('nic-{0}', parameters('name'))]",
              "location": "[parameters('location')]",
              "tags": "[parameters('tags')]",
              "properties": {
                "ipConfigurations": [
                  {
                    "name": "ipconfig1",
                    "properties": {
                      "subnet": {
                        "id": "[parameters('subnetId')]"
                      },
                      "privateIPAllocationMethod": "Dynamic"
                    }
                  }
                ]
              }
            },
            {
              "type": "Microsoft.Compute/virtualMachines",
              "apiVersion": "2024-03-01",
              "name": "[parameters('name')]",
              "location": "[parameters('location')]",
              "tags": "[parameters('tags')]",
              "properties": {
                "hardwareProfile": {
                  "vmSize": "[parameters('vmSize')]"
                },
                "osProfile": {
                  "computerName": "[take(parameters('name'), 15)]",
                  "adminUsername": "[parameters('adminUsername')]",
                  "adminPassword": "[parameters('adminPassword')]",
                  "customData": "[base64(variables('cloudInitScript'))]",
                  "linuxConfiguration": {
                    "disablePasswordAuthentication": false
                  }
                },
                "storageProfile": {
                  "imageReference": {
                    "publisher": "[parameters('imagePublisher')]",
                    "offer": "[parameters('imageOffer')]",
                    "sku": "[parameters('imageSku')]",
                    "version": "latest"
                  },
                  "osDisk": {
                    "createOption": "FromImage",
                    "managedDisk": {
                      "storageAccountType": "StandardSSD_LRS"
                    }
                  }
                },
                "networkProfile": {
                  "networkInterfaces": [
                    {
                      "id": "[resourceId('Microsoft.Network/networkInterfaces', format('nic-{0}', parameters('name')))]"
                    }
                  ]
                }
              },
              "dependsOn": [
                "[resourceId('Microsoft.Network/networkInterfaces', format('nic-{0}', parameters('name')))]"
              ]
            }
          ],
          "outputs": {
            "vmName": {
              "type": "string",
              "value": "[parameters('name')]"
            },
            "vmId": {
              "type": "string",
              "value": "[resourceId('Microsoft.Compute/virtualMachines', parameters('name'))]"
            },
            "privateIpAddress": {
              "type": "string",
              "value": "[reference(resourceId('Microsoft.Network/networkInterfaces', format('nic-{0}', parameters('name'))), '2024-01-01').ipConfigurations[0].properties.privateIPAddress]"
            }
          }
        }
      },
      "dependsOn": [
        "[resourceId('Microsoft.Resources/deployments', 'vnet-deployment')]"
      ]
    },
    {
      "type": "Microsoft.Resources/deployments",
      "apiVersion": "2025-04-01",
      "name": "bastion-deployment",
      "properties": {
        "expressionEvaluationOptions": {
          "scope": "inner"
        },
        "mode": "Incremental",
        "parameters": {
          "name": {
            "value": "[format('{0}{1}', variables('abbrs').networkBastionHosts, variables('resourceToken'))]"
          },
          "location": {
            "value": "[variables('location')]"
          },
          "tags": {
            "value": "[variables('tags')]"
          },
          "bastionSubnetId": {
            "value": "[reference(resourceId('Microsoft.Resources/deployments', 'vnet-deployment'), '2025-04-01').outputs.bastionSubnetId.value]"
          }
        },
        "template": {
          "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
          "contentVersion": "1.0.0.0",
          "metadata": {
            "_generator": {
              "name": "bicep",
              "version": "0.40.2.10011",
              "templateHash": "10753967215200930615"
            }
          },
          "parameters": {
            "name": {
              "type": "string",
              "metadata": {
                "description": "Name of the Bastion Host."
              }
            },
            "location": {
              "type": "string",
              "metadata": {
                "description": "Location for the resource."
              }
            },
            "tags": {
              "type": "object",
              "defaultValue": {},
              "metadata": {
                "description": "Tags for the resource."
              }
            },
            "bastionSubnetId": {
              "type": "string",
              "metadata": {
                "description": "Subnet ID for the AzureBastionSubnet."
              }
            }
          },
          "resources": [
            {
              "type": "Microsoft.Network/publicIPAddresses",
              "apiVersion": "2024-01-01",
              "name": "[format('pip-{0}', parameters('name'))]",
              "location": "[parameters('location')]",
              "tags": "[parameters('tags')]",
              "sku": {
                "name": "Standard"
              },
              "properties": {
                "publicIPAllocationMethod": "Static"
              }
            },
            {
              "type": "Microsoft.Network/bastionHosts",
              "apiVersion": "2024-01-01",
              "name": "[parameters('name')]",
              "location": "[parameters('location')]",
              "tags": "[parameters('tags')]",
              "sku": {
                "name": "Standard"
              },
              "properties": {
                "enableTunneling": true,
                "ipConfigurations": [
                  {
                    "name": "bastion-ipconfig",
                    "properties": {
                      "subnet": {
                        "id": "[parameters('bastionSubnetId')]"
                      },
                      "publicIPAddress": {
                        "id": "[resourceId('Microsoft.Network/publicIPAddresses', format('pip-{0}', parameters('name')))]"
                      }
                    }
                  }
                ]
              },
              "dependsOn": [
                "[resourceId('Microsoft.Network/publicIPAddresses', format('pip-{0}', parameters('name')))]"
              ]
            }
          ],
          "outputs": {
            "bastionName": {
              "type": "string",
              "value": "[parameters('name')]"
            },
            "bastionId": {
              "type": "string",
              "value": "[resourceId('Microsoft.Network/bastionHosts', parameters('name'))]"
            }
          }
        }
      },
      "dependsOn": [
        "[resourceId('Microsoft.Resources/deployments', 'vnet-deployment')]"
      ]
    }
  ],
  "outputs": {
    "VNET_NAME": {
      "type": "string",
      "value": "[reference(resourceId('Microsoft.Resources/deployments', 'vnet-deployment'), '2025-04-01').outputs.vnetName.value]"
    },
    "VM_NAME": {
      "type": "string",
      "value": "[reference(resourceId('Microsoft.Resources/deployments', 'vm-deployment'), '2025-04-01').outputs.vmName.value]"
    },
    "VM_PRIVATE_IP": {
      "type": "string",
      "value": "[reference(resourceId('Microsoft.Resources/deployments', 'vm-deployment'), '2025-04-01').outputs.privateIpAddress.value]"
    },
    "BASTION_NAME": {
      "type": "string",
      "value": "[reference(resourceId('Microsoft.Resources/deployments', 'bastion-deployment'), '2025-04-01').outputs.bastionName.value]"
    },
    "RESOURCE_GROUP": {
      "type": "string",
      "value": "[resourceGroup().name]"
    },
    "VM_RESOURCE_ID": {
      "type": "string",
      "value": "[reference(resourceId('Microsoft.Resources/deployments', 'vm-deployment'), '2025-04-01').outputs.vmId.value]"
    },
    "BASTION_TUNNEL_COMMAND": {
      "type": "string",
      "value": "[format('az network bastion tunnel --name {0} --resource-group {1} --target-resource-id {2} --resource-port 8080 --port 8080', reference(resourceId('Microsoft.Resources/deployments', 'bastion-deployment'), '2025-04-01').outputs.bastionName.value, resourceGroup().name, reference(resourceId('Microsoft.Resources/deployments', 'vm-deployment'), '2025-04-01').outputs.vmId.value)]"
    }
  }
}
